# researcher

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
researcher/: __init__.py
researcher/core/: __init__.py  researcher.py
researcher/utils/: __init__.py
tests/: __init__.py  test_researcher.py
